Revision history for Template-Plugin-Digest-MD5
===============================================

        - new maintainer: BARBIE.
        - repackaged distribution.
        - updated META.yml, added META.json.
        - added LICENSE file.

0.03    2006-04-26
        - Last release to CPAN by Andrew.