@@ -24,6 +24,7 @@
         "runtime" : {
             "requires" : {
                 "perl": "5.006",
+                "Template": "2.0",
                 "Template::Plugin": "2.0",
                 "Template::Stash": "2.0",
                 "Digest::MD5": "0"
