@@ -5,6 +5,8 @@ Revision history for Template-Plugin-Digest-MD5
         - repackaged distribution.
         - updated META.yml, added META.json.
         - added LICENSE file.
+        - added minimum perl version (5.006).
+        - reworked Makefile.PL for clarity.
 
 0.03    2006-04-26
         - Last release to CPAN by Andrew.
